# rust_web_server

./: .gitignore  LICENSE  README.md  docker-compose.yaml
client/: .dockerignore  .env.development  .eslintrc.js  Dockerfile  Dockerfile.base  nginx.conf  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: index.tsx
client/src/components/Anchor/: Anchor.spec.tsx  Anchor.styles.tsx  Anchor.tsx
client/src/components/App/: App.spec.tsx  App.styles.tsx  App.tsx
client/src/components/ErrorBoundary/: ErrorBoundary.spec.tsx  ErrorBoundary.tsx
client/src/utils/: array.spec.tsx  array.tsx  cursorConnection.spec.tsx  cursorConnection.tsx  environment.tsx  hooks.tsx  interfaces.tsx  mockData.tsx  theme.tsx
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  docker-compose.yaml
server/database/: seed.sql
server/database_seed/: organizations.json  repositories.json  schema.sql  users.json
server/scripts/: build.sh  coverage.sh  database_schema.sh  database_seed.sh  start_dev.sh  test.sh  test_coverage.sh  test_watch.sh
server/src/: cors.rs  cursor_connection.rs  db.rs  db_spec.rs  http.rs  main.rs  model.rs  repository.rs
server/src/http/: cors.rs  cursor_connection.rs  http_handler.rs  mod.rs  rest.rs  route.rs
server/src/http/middleware/: mod.rs  validate_pagination_arguments.rs  validate_pagination_arguments_spec.rs
server/src/http/rest/: middleware.rs  mod.rs  route.rs  route_spec.rs
server/src/http/rest/middleware/: validate_pagination_arguments.rs  validate_pagination_arguments_spec.rs
server/src/http/rest/route/: mod.rs  organization.rs  organization_spec.rs  profile.rs  profile_spec.rs  repositories.rs  user.rs  user_spec.rs
server/src/http/route/: mod.rs  organization.rs  organization_spec.rs  profile.rs  profile_spec.rs  route_spec.rs  user.rs  user_spec.rs
server/src/lib/: cursor_connection.rs  cursor_connection_spec.rs  mod.rs  sql_query_builder.rs  sql_query_builder_spec.rs
server/src/mock/: mod.rs
server/src/model/: mod.rs  organization.rs  organization_spec.rs  repository.rs  repository_spec.rs  user.rs  user_spec.rs  utils.rs  utils_spec.rs
server/src/repository/: mod.rs  organization.rs  repository.rs  user.rs  utils.rs
server/src/route/: mod.rs  repositories.rs  user.rs
server/src/setup/: db.rs  db_spec.rs  mock.rs  mod.rs  tracing.rs
(+75 files in other folders)
