[package]
name = "rust_web_server"
version = "0.1.0"
authors = ["Belchior Oliveira <belchior@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-service = "2.0.2"
actix-web = "4.1.0"
base64 = "0.13.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
futures-util = "0.3.23"
mongodb = { version = "2.3.0", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.144"
tokio-stream = "0.1.7"

[dev-dependencies]
pretty_assertions = "1.2.1"
actix-rt = "2.7.0"
