[package]
name = "rust_web_server"
version = "0.1.0"
authors = ["Belchior Oliveira <belchior@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-service = "2.0.2"
actix-web = "4.1.0"
base64 = "0.13.0"
dotenv = "0.15.0"
futures = "0.3.17"
futures-util = "0.3.23"
mongodb = "2.3.0"
serde = "1.0.144"
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tokio-stream = "0.1.7"
tracing = "0.1.36"
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.17" }
tracing-bunyan-formatter = "0.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
actix-rt = "2.7.0"
