[package]
name = "rust_web_server"
version = "0.1.0"
authors = ["Belchior Oliveira <belchior@outlook.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6.2"
actix-service = "2.0.2"
actix-web = "4.1.0"
base64 = "0.13.0"
deadpool-postgres = "0.10.2"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.23"
futures-util = "0.3.23"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = "1.20.1"
tokio-postgres = "0.7.7"
tokio-stream = "0.1.9"
sql_query_builder = { version = "0.11.6", features = ["postgresql"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
actix-rt = "2.7.0"
